welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: recursive variable x needs type
	x=(litMessage(): String);
        ^BDRBuggle:5: error: not found: value n
	if (n==A) {
            ^BDRBuggle:7: error: not found: value n
	} else if (n==B) {
                   ^BDRBuggle:10: error: not found: value n
	} else if (n==L) {
                   ^BDRBuggle:13: error: not found: value n
	} else if (n==R) {
                   ^BDRBuggle:16: error: not found: value n
	} else if (n==X) {
                   ^BDRBuggle:20: error: not found: value n
	} else if (n==Z) {
                   ^